# podcast-email-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml.example  pyproject.toml  requirements-cloud.txt  requirements.txt
src/: __init__.py  bot.py  config.py  security.py  supervisor.py
src/ai/: __init__.py  connections.py  embeddings.py  learning.py  summarizer.py
src/digest/: __init__.py  daily.py
src/processors/: __init__.py  article.py  podcast.py  thread.py
src/storage/: __init__.py  categories.py  summaries.py  vault.py  vectors.py
tests/: __init__.py  test_vault.py  test_vectors.py
